elements/rh-video/rh-video.css
:host {
  display: flex;
}

:host([hidden]),
*[hidden] {
  display: none !important;
}

#video,
#consent {
  display: inline-flex;
  align-items: center;
  flex-direction: column;
}

#video {
  justify-content: stretch;
  position: relative;
}

figure,
::slotted([slot="thumbnail"]),
::slotted(iframe) {
  max-width: 100%;
}

::slotted([slot="thumbnail"]) {
  display: block;
}

::slotted(iframe) {
  width: 100%;
  height: 100%;
  position: absolute;
  inset-block-start: 0;
  inset-inline-start: 0;
  border: 0;
}

figure {
  --_video-focus-border-color: var(--rh-color-border-interactive-on-light, #0066cc);
  --_video-play-btn-bkg-color: rgb(31 31 31 / var(--rh-opacity-50, 50%));
  --_video-play-btn-interactive-bkg-color: rgb(21 21 21 / var(--rh-opacity-80, 80%));

  display: flex;
  flex-direction: column;
  margin: 0;
}

figure.dark {
  --_video-focus-border-color: var(--rh-color-border-interactive-on-dark, #92c5f9);
  --_video-play-btn-bkg-color: rgb(255 255 255 / var(--rh-opacity-20, 20%));
  --_video-play-btn-interactive-bkg-color: rgb(255 255 255 / var(--rh-opacity-50, 50%));
  --_caption-text-color: var(--rh-color-text-secondary-on-dark, #c7c7c7);
}

figcaption {
  margin-block-start: var(--rh-space-lg, 16px);
}

#consent,
#watermark {
  position: absolute;
  inset: 0;
}

#consent {
  justify-content: center;
  container: consent / inline-size;
}

#consent-body {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  text-align: center;
  z-index: 5;
}

#consent-message,
::slotted([slot="consent-message"]) {
  font-family: var(--rh-font-family-heading, RedHatDisplay, "Red Hat Display", "Noto Sans Arabic", "Noto Sans Hebrew", "Noto Sans JP", "Noto Sans KR", "Noto Sans Malayalam", "Noto Sans SC", "Noto Sans TC", "Noto Sans Thai", Helvetica, Arial, sans-serif);
  font-size: var(--rh-font-size-heading-xs, 1.25rem);
  line-height: var(--rh-line-height-heading, 1.3);
}

#consent-message,
::slotted([slot="consent-message"]:last-of-type) {
  margin-block-end: var(--rh-space-lg, 16px);
}

@container consent (min-width: 576px) {
  #consent-message,
  ::slotted([slot="consent-message"]:last-of-type) {
    margin-block-end: var(--rh-space-xl, 24px);
  }

  #consent-body {
    padding: var(--rh-space-xl, 24px);
  }

  #consent-message {
    font-size: var(--rh-font-size-heading-sm, 1.5rem);
  }
}

#play {
  --rh-size-icon-04: var(--rh-length-xl, 24px);

  cursor: pointer;
  display: block;
  height: 100%;
  inset: 0;
  position: absolute;
  width: 100%;
}

#play:focus-within {
  border-radius: var(--rh-border-radius-default, 3px);
  outline: var(--rh-border-width-lg, 3px) solid var(--_video-focus-border-color);
  outline-offset: var(--rh-border-width-md, 2px);
}

#play::part(button) {
  background-color: var(--_video-play-btn-bkg-color, var(--rh-color-surface-darkest, #151515));
  inset-block-end: 0;
  inset-block-start: calc(50% - var(--rh-length-2xl, 32px)); /* NOTE: 32px = 1/2 play btn width */
  inset-inline-end: 0;
  inset-inline-start: 50%;
  position: absolute;
  outline: none;
  text-align: center;
  transform: translate(-50%);
  width: var(--rh-length-4xl, 64px);
}

#play:hover::part(button),
#play:focus::part(button),
#play:active::part(button) {
  background-color: var(--_video-play-btn-interactive-bkg-color);
}

.dark #play::part(icon) {
  color: var(--rh-color-surface-lightest, #ffffff);
}

#play[hidden],
:is(.video, .consent) ::slotted([slot="thumbnail"]) {
  opacity: 0;
  pointer-events: none;
}

.visually-hidden {
  position: fixed;
  inset-block-start: 0;
  inset-inline-start: 0;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

#autoplay {
  position: absolute;
  inset: 0;
  opacity: 0;
  transition: opacity 200ms ease-in;
}

.video #autoplay {
  opacity: 1;
}

::slotted([slot="caption"]) {
  color: var(--_caption-text-color, var(--rh-color-text-secondary-on-light, #4d4d4d));
  font-size: var(--rh-font-size-body-text-sm, 0.875rem) !important;
  line-height: var(--rh-line-height-body-text, 1.5);
}

